# packagent

./: .dockerignore  .gitignore  AGENTS.md  README.md  TEST_LOG.md  pyproject.toml
docker/: Dockerfile
docs/: architecture.md
scripts/: bootstrap_docker_home.sh  e2e_in_docker.sh  run_docker_sandbox.sh
src/packagent/: __init__.py  __main__.py  activation.py  app.py  cli.py  errors.py  hosts.py  locking.py  models.py  paths.py  shell.py  util.py  validation.py
tests/: test_manager.py  test_models_and_validation.py  test_shell.py
